# spice

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: config.yml
config/: config.yaml  config0.yaml  config1.yaml  config10.yaml  config2.yaml  config3.yaml  config4.yaml  config5.yaml  config6.yaml  config7.yaml  config8.yaml  config9.yaml  configDemo.yaml  configFDR.yaml  configNonlinear.yaml  configUNET.yaml  configXenium.yaml
config/datasets/: DemoDataset.yaml  DummyDataset.yaml  FilteredMerfishDataset.yaml  MerfishDataset.yaml  SyntheticDataset0.yaml  SyntheticDataset1.yaml  SyntheticDataset10.yaml  SyntheticDataset2.yaml  SyntheticDataset3.yaml  SyntheticDataset4.yaml  SyntheticDataset5.yaml  SyntheticDataset6.yaml  SyntheticDataset7.yaml  SyntheticDataset8.yaml  SyntheticDataset9.yaml  SyntheticFDR.yaml  SyntheticNonlinear.yaml  XeniumDataset.yaml  merfish.yaml
config/model/: GraphUNet.yaml  MeanExpressionNN.yaml  MonetAutoencoder2D.yaml  MonetDense.yaml  MonetDenseDemo.yaml  MonetDenseSynthetic.yaml  MonetDenseXenium.yaml  MonetVAE.yaml  TrivialAutoencoder.yaml  TrivialDense.yaml
config/optimizer/: adam.yaml  sgd.yaml
config/predict/: default.yaml
config/training/: FD.yaml  UNet.yaml  default.yaml
demo_data/raw/: merfish_demo.hdf5
examples/: 0v60.ipynb  0v60.json  0v60_w_celltypes.ipynb  0v60_w_celltypes.json  1_competing.txt  1_deepST.txt  2022_01_merfish_dataset_creation.ipynb  2022_01_merfish_dataset_creation.py  2022_03_lengthscales_happymask.ipynb  2_competing.txt  2_deepST.txt  3_competing.txt  3_deepST.txt  4_competing.txt  4_deepST.txt  5_competing.txt  5_deepST.txt  Ace2_0_v_60.json  CV-Ligand-Only.ipynb  CV.ipynb  FDRSynthetic.ipynb  Figure3.ipynb  Graphs.ipynb  GridSplitting.ipynb  IHST.ipynb  LightGBM.py  LightGBMSynthetic.py  LightGBM_results.json  LightGBM_synthetic_results.json  LightGBM_synthetic_results_alt.json  MAE.ipynb  Masking.ipynb  Mean Prediction.ipynb  Plots.ipynb  Roman60.json  SoloTest.ipynb  Synthetic Data.ipynb  Tensorboard_Image_Test.ipynb  Testing.ipynb  Untitled.ipynb  (+41 more)
examples/reproduce/: Full_DeepST.ipynb  Table Results Reproduction.ipynb  gene_diffs.json
examples/static/: Figure 3.ipynb  RealResults.ipynb  SyntheticResults.ipynb  Tensorboard.ipynb  Untitled.ipynb
output/architecture/: MonetAutoencoder2D.txt  TrivialAutoencoder.txt
output/parameters/: MonetAutoencoder2D.txt  TrivialAutoencoder.txt
scratch/: 0v60.ipynb  0v60.json  0v60_w_celltypes.ipynb  2022_01_merfish_dataset_creation.ipynb  2022_03_lengthscales_happymask.ipynb  CV-Ligand-Only.ipynb  Graphs.ipynb  KFoldTest.ipynb  LightGBM.py  LightGBM_results_NO_celltype.json  LightGBM_results_NO_celltype_WITHRECEPTORS.json  LightGBM_results_meanexpr.json  LightGBM_synthetic_results.json  LightGBM_synthetic_results_no_log.json  Plots.ipynb  Roman0.json  Synthetic Data.ipynb  Tensorboard_Image_Test.ipynb  Testing.ipynb  XGBoost_L1_MAE.json  XGBoost_L1_time_excitatory.json  XGBoost_MAE.json  XGBoost_time_all.json  XGBoost_time_excitatory.json  animal-filtering.ipynb  animal_id.json  data_processing.py  deepSTSynethticResults.ipynb  deepST_MAE_inhibitory.json  deepST_Mem_Timing-Copy1.ipynb  deepST_results_no_celltypes.json  deepST_results_with_celltypes.json  dummy_deepST.ipynb  lightgbm_results_addata.json  male_excitatory_raw.csv  r2_0v60.json  rad_to_neighbors.json  recent_result.json  response_gene_distribution.ipynb  results.json  (+51 more)
scratch/results/: results_comparison.ipynb
scratch/static/: RealResults.ipynb  SyntheticResults.ipynb
spatial/: base_networks.py  generate_graph.py  ligands_only.txt  main.py  merfish_dataset.py  merfish_geometric.py  monet_ae.py  monet_merfish_ae.py  monet_mnist_ae.py  multirun.txt  non_response.txt  non_response_blank_removed.txt  non_response_blank_removed_xenium.txt  predict.py  predict_xenium.py  train.py  train_xenium.py
spatial/models/: base_networks.py  monet_ae.py
tests/: test_spatial.py  test_version.py
tests/data/raw/: merfish.csv
