[tool.poetry]
name = "spatial"
version = "0.1.0"
description = "Deep Generative Models for Spatial Transcriptomics"
authors = ["Roman Kouznetsov, Ariel Polani, Jackson Loper, Jeffrey Regier"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.7"
torch = { url = "https://download.pytorch.org/whl/cu110/torch-1.7.1%2Bcu110-cp38-cp38-linux_x86_64.whl" }
torch-scatter = { url = "https://pytorch-geometric.com/whl/torch-1.7.0+cu110/torch_scatter-2.0.5-cp38-cp38-linux_x86_64.whl" }
torch-sparse = { url = "https://pytorch-geometric.com/whl/torch-1.7.0+cu110/torch_sparse-0.6.8-cp38-cp38-linux_x86_64.whl" }
torch-cluster = { url = "https://pytorch-geometric.com/whl/torch-1.7.0+cu110/torch_cluster-1.5.8-cp38-cp38-linux_x86_64.whl" }
torch-spline-conv = { url = "https://pytorch-geometric.com/whl/torch-1.7.0+cu110/torch_spline_conv-1.2.0-cp38-cp38-linux_x86_64.whl" }
torch-geometric = "^1.6.3"
scikit-learn = "^0.24.1"
jupyter = "^1.0.0"
pytorch-lightning = "^1.1.5"
pandas = "^1.2.2"
jedi = "^0.17.2"
numba = "0.52"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
black = "^20.8b1"
jupyter = "^1.0.0"
pylint = "^2.6.0"
pre-commit-hooks = "^3.4.0"
pre-commit = "^2.10.1"
rope = "^0.18.0"
isort = "^5.7.0"
jedi = "^0.17.2"

[tool.poetry.scripts]
spatial = "spatial.monet_merfish_ae:merfish_main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
