[tool.poetry]
name = "spatial"
version = "0.1.0"
description = "Deep Generative Models for Spatial Transcriptomics"
authors = ["Roman Kouznetsov, Jackson Loper, Jeffrey Regier"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
torch = { url = "https://download.pytorch.org/whl/cu111/torch-1.8.1%2Bcu111-cp38-cp38-linux_x86_64.whl" }
torch-scatter = { url = "https://data.pyg.org/whl/torch-1.8.0%2Bcu111/torch_scatter-2.0.8-cp38-cp38-linux_x86_64.whl" }
torch-sparse = { url = "https://data.pyg.org/whl/torch-1.8.0%2Bcu111/torch_sparse-0.6.12-cp38-cp38-linux_x86_64.whl" }
torch-cluster = { url = "https://data.pyg.org/whl/torch-1.8.0%2Bcu111/torch_cluster-1.5.9-cp38-cp38-linux_x86_64.whl" }
torch-spline-conv = { url = "https://data.pyg.org/whl/torch-1.8.0%2Bcu111/torch_spline_conv-1.2.1-cp38-cp38-linux_x86_64.whl" }
torch-geometric = "^1.6.3"
scikit-learn = ">=0.24.1"
jupyter = "^1.0.0"
pytorch-lightning = "^1.1.5"
pandas = "^1.2.2"
hydra-core = "^1.0.6"
nbstripout = ">=0.5.0"
h5py = "^3.5.0"
pillow = "^9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
black = "^22.3.0"
jupyter = "^1.0.0"
pylint = "^2.6.0"
pre-commit-hooks = "^3.4.0"
pre-commit = "^2.10.1"
rope = "^0.18.0"
isort = "^5.7.0"
jedi = "^0.17.2"
wemake-python-styleguide = "^0.15.1"
tqdm = "^4.62.3"

[tool.poetry.scripts]
spatial = "spatial.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
